# spare-actre

./: .build-dev.sh  .exrc  README.md  org-roam-learning.cabal  spare-actre.cabal  test-dev.sh
src/exe/: Main.hs
src/lib/: Library.hs  MainCopy.hs  Spec.hs
