cabal-version: 3.0

name:
  org-roam-learning
version:
  0.1.0.0
license-file:
  LICENSE
build-type:
  Simple

common lang-extensions
  default-extensions:
    , DoAndIfThenElse

common build-dependencies
  build-depends:
    , base
    , containers
    , unordered-containers
    , directory
    , system-fileio
    , system-filepath
    , text
    , chronologique
    , cryptonite
    , memory
    , bytestring
    , dhall

library
  import:
    , lang-extensions
    , build-dependencies
  hs-source-dirs: src/lib
  exposed-modules:
    , Library
  -- other-modules:
  -- build-depends:
  default-language: Haskell2010

executable org-roam-learning-exe
  import:
    , lang-extensions
    , build-dependencies
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , org-roam-learning
  hs-source-dirs:      src/exe
  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts

