cabal-version: 3.0

name:
  spare-actre
version:
  0.1.0.0
license-file:
  LICENSE
build-type:
  Simple

common lang-extensions
  default-extensions:
    , DoAndIfThenElse

common build-dependencies
  build-depends:
    , base
    , containers
    , unordered-containers
    , directory
    , system-fileio
    , system-filepath
    , text
    , chronologique
    , cryptonite
    , memory
    , bytestring
    , dhall

common test-dependencies
  build-depends:
    , hspec
    , QuickCheck

library
  import:
    , lang-extensions
    , build-dependencies
    , test-dependencies
  hs-source-dirs: src/lib
  exposed-modules:
    , Library
    , MainCopy
  -- other-modules:
  -- build-depends:
  default-language: Haskell2010

test-suite library-tests
  import:
    , lang-extensions
    , build-dependencies
    , test-dependencies
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    , MainCopy
    , Library
  build-depends:
    , spare-actre
  hs-source-dirs: src/lib

executable spare-actre-exe
  import:
    , lang-extensions
    , build-dependencies
    , test-dependencies
  main-is: Main.hs
  other-modules:
  build-depends:
    , spare-actre
  hs-source-dirs:      src/exe
  default-language:    Haskell2010

  ghc-options: -threaded -rtsopts

